Fix canvas overflowing window

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -37,3 +37,6 @@
   .navbar__title {
     margin: 0.5em;
     font-size: 1.3em; }
+
+.content__canvas {
+  display: block; }
