--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -55,3 +55,7 @@
     font-size: 1.3em;
   }
 }
+
+.content__canvas {
+  display: block;
+}
